--- a/faq.html
+++ b/faq.html
@@ -407,13 +407,13 @@
           <div class="container py-4">
             <div class="row gy-4">
               <div class="col-lg-3">
-                <h4 class="mb-3 text-uppercase">About Us</h4>
+                <h4 class="mb-3 text-uppercase">Acerca de nosotros</h4>
                 <p class="text-sm text-gray-500">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 <hr>
                 <h4 class="h6 text-uppercase">Join Our Monthly Newsletter</h4>
                 <form>
                   <div class="input-group border mb-3">
-                    <input class="form-control bg-none border-0 shadow-0 text-white" type="email" placeholder="Email address" aria-label="Email address" aria-describedby="button-submit">
+                    <input class="form-control bg-none border-0 shadow-0 text-white" type="email" placeholder="e-Mail" aria-label="Email address" aria-describedby="button-submit">
                     <button class="btn btn-outline-light bg-none border-0" id="button-submit" type="button"><i class="fas fa-paper-plane"></i></button>
                   </div>
                 </form>
@@ -439,8 +439,8 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h4 class="mb-3 text-uppercase">Contact</h4>
-                <p class="text-uppercase text-sm text-gray-500"><strong>Universal Ltd.</strong><br>13/25 New Avenue <br>Newtown upon River <br>45Y 73J <br>England <br><strong>Great Britain</strong></p><a class="btn btn-primary" href="contact.html">Go to contact page</a>
+                <h4 class="mb-3 text-uppercase">Contacto</h4>
+                <p class="text-uppercase text-sm text-gray-500"><strong>Universal Ltd.</strong><br>direcion <br>direcion 2 <br>Codigo postal <br>Buenos Aires <br><strong>Argentina</strong></p><a class="btn btn-primary" href="contact.html">Go to contact page</a>
               </div>
               <div class="col-lg-3">
                 <ul class="list-inline mb-0">
@@ -460,7 +460,7 @@
           <div class="container">
             <div class="row align-items-cenrer gy-3 text-center">
               <div class="col-md-6 text-md-start">
-                <p class="mb-0 text-sm text-gray-500">&copy; 2021. Your company / name goes here </p>
+                <p class="mb-0 text-sm text-gray-500">&copy; 2022. PukenHouse </p>
               </div>
               <div class="col-md-6 text text-md-end">
                 <p class="mb-0 text-sm text-gray-500">Template designed by  <a href="https://bootstrapious.com" target="_blank">Bootstrapious</a> &amp; <a href="https://hikershq.com/" target="_blank">HHQ</a> </p>
