--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <li class="nav-item dropdown"><a class="nav-link dropdown-toggle active" id="hpDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
                   <ul class="dropdown-menu" aria-labelledby="hpDropdown">
                     <li><a class="dropdown-item text-uppercase border-bottom active" href="index.html">Home </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index2.html">Option 2: Application </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index3.html">Option 3: Startup </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index4.html">Option 4: Agency </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index2.html">Subcripcion </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index3.html">Quienes somos </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index4.html">Nuestra historia </a></li>
                     <!-- homepage submenu-->
                     <li class="dropdown-submenu dropend border-0 p-0"><a class="dropdown-item text-uppercase dropdown-submenu-toggle" href="#" role="button" aria-expanded="false">Dropdown link</a>
                       <ul class="dropdown-menu dropdown-submenu m-0">
