--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Universal - All In 1 Template</title>
+    <title>Mi primera pagina</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -34,11 +34,11 @@
   <body>
     <div class="wide" id="all">
       <!-- Top bar-->
-      <div class="top-bar py-2" id="topBar" style="background: #555">
+      <div class="top-bar py-2" id="topBar" style="background: darkcyan">
         <div class="container px-lg-0 text-light py-1">
           <div class="row d-flex align-items-center">
             <div class="col-md-6 d-md-block d-none">
-              <p class="mb-0 text-xs">Contact us on +420 777 555 333 or hello@universal.com.</p>
+              <p class="mb-0 text-xs">Contacteme al +54 9 11 5599 9388 o skatemansoultrain@gmail.com.</p>
             </div>
             <div class="col-md-6">
               <div class="d-flex justify-content-md-end justify-content-between">
@@ -53,7 +53,7 @@
                 <ul class="list-inline mb-0 ms-lg-4">
                   <li class="list-inline-item text-gray-600 m-0"><a class="text-xs social-link-hover" href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                   <li class="list-inline-item text-gray-600 m-0"><a class="text-xs social-link-hover" href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                  <li class="list-inline-item text-gray-600 m-0"><a class="text-xs social-link-hover" href="#" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li class="list-inline-item text-gray-600 m-0"><a class="text-xs social-link-hover" href="https://www.linkedin.com/in/sergio-juli%C3%A1n-ram%C3%ADrez-acosta-182278206/" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                   <li class="list-inline-item text-gray-600 m-0"><a class="text-xs social-link-hover" href="#" title="Email"><i class="fas fa-envelope"></i></a></li>
                 </ul>
               </div>
@@ -67,23 +67,23 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title text-uppercase" id="login-modalLabel">Customer Login</h4>
+              <h4 class="modal-title text-uppercase" id="login-modalLabel">Iniciar sesión</h4>
               <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <form action="customer-orders.html" method="get">
                 <div class="form-group mb-3">
-                  <input class="form-control" id="email_modal" type="text" placeholder="email">
+                  <input class="form-control" id="email_modal" type="text" placeholder="e-Mail">
                 </div>
                 <div class="form-group mb-3">
-                  <input class="form-control" id="password_modal" type="password" placeholder="password">
+                  <input class="form-control" id="password_modal" type="password" placeholder="Contraseña">
                 </div>
                 <p class="text-center">
-                  <button class="btn btn-outline-primary"><i class="fas fa-door-open"></i> Log in</button>
+                  <button class="btn btn-outline-primary"><i class="fas fa-door-open"></i> Iniciar Sesión</button>
                 </p>
               </form>
-              <p class="text-center text-muted small">Not registered yet?</p>
-              <p class="text-center text-muted small"><a href="customer-register.html"><strong>Register now</strong></a>! It is easy and done in 1 minute and gives you access to special discounts and much more!</p>
+              <p class="text-center text-muted small">¿Todavia no estas registrado?</p>
+              <p class="text-center text-muted small"><a href="customer-register.html"><strong>¡Registrate ahora</strong></a>! ¡Solo toma 1 minuto y puedes obetener grandes beneficios y descuentos!</p>
             </div>
           </div>
         </div>
@@ -102,10 +102,10 @@
                 <!-- homepage dropdown-->
                 <li class="nav-item dropdown"><a class="nav-link dropdown-toggle active" id="hpDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Home</a>
                   <ul class="dropdown-menu" aria-labelledby="hpDropdown">
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index.html">Option 1: Default Page </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index2.html">Option 2: Application </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom" href="index3.html">Option 3: Startup </a></li>
-                    <li><a class="dropdown-item text-uppercase border-bottom active" href="index4.html">Option 4: Agency </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom active" href="index.html">Home </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index2.html">Subcripcion </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index3.html">Quienes somos </a></li>
+                    <li><a class="dropdown-item text-uppercase border-bottom" href="index4.html">Nuestra historia </a></li>
                     <!-- homepage submenu-->
                     <li class="dropdown-submenu dropend border-0 p-0"><a class="dropdown-item text-uppercase dropdown-submenu-toggle" href="#" role="button" aria-expanded="false">Dropdown link</a>
                       <ul class="dropdown-menu dropdown-submenu m-0">
@@ -601,13 +601,13 @@
           <div class="container py-4">
             <div class="row gy-4">
               <div class="col-lg-3">
-                <h4 class="mb-3 text-uppercase">About Us</h4>
+                <h4 class="mb-3 text-uppercase">Acerca de nosotros</h4>
                 <p class="text-sm text-gray-500">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 <hr>
                 <h4 class="h6 text-uppercase">Join Our Monthly Newsletter</h4>
                 <form>
                   <div class="input-group border mb-3">
-                    <input class="form-control bg-none border-0 shadow-0 text-white" type="email" placeholder="Email address" aria-label="Email address" aria-describedby="button-submit">
+                    <input class="form-control bg-none border-0 shadow-0 text-white" type="email" placeholder="e-Mail" aria-label="Email address" aria-describedby="button-submit">
                     <button class="btn btn-outline-light bg-none border-0" id="button-submit" type="button"><i class="fas fa-paper-plane"></i></button>
                   </div>
                 </form>
@@ -633,8 +633,8 @@
                 </ul>
               </div>
               <div class="col-lg-3">
-                <h4 class="mb-3 text-uppercase">Contact</h4>
-                <p class="text-uppercase text-sm text-gray-500"><strong>Universal Ltd.</strong><br>13/25 New Avenue <br>Newtown upon River <br>45Y 73J <br>England <br><strong>Great Britain</strong></p><a class="btn btn-primary" href="contact.html">Go to contact page</a>
+                <h4 class="mb-3 text-uppercase">Contacto</h4>
+                <p class="text-uppercase text-sm text-gray-500"><strong>Universal Ltd.</strong><br>direcion <br>direcion 2 <br>Codigo postal <br>Buenos Aires <br><strong>Argentina</strong></p><a class="btn btn-primary" href="contact.html">Go to contact page</a>
               </div>
               <div class="col-lg-3">
                 <ul class="list-inline mb-0">
@@ -654,7 +654,7 @@
           <div class="container">
             <div class="row align-items-cenrer gy-3 text-center">
               <div class="col-md-6 text-md-start">
-                <p class="mb-0 text-sm text-gray-500">&copy; 2021. Your company / name goes here </p>
+                <p class="mb-0 text-sm text-gray-500">&copy; 2022. PukenHouse </p>
               </div>
               <div class="col-md-6 text text-md-end">
                 <p class="mb-0 text-sm text-gray-500">Template designed by  <a href="https://bootstrapious.com" target="_blank">Bootstrapious</a> &amp; <a href="https://hikershq.com/" target="_blank">HHQ</a> </p>
